[gd_scene load_steps=8 format=3 uid="uid://fuj2xt1sh8nm"]

[ext_resource type="Script" path="res://hud.gd" id="1_o8fq7"]
[ext_resource type="Theme" uid="uid://c2t22owqfyns8" path="res://theme.tres" id="2_hq42y"]

[sub_resource type="FontVariation" id="FontVariation_mieu8"]

[sub_resource type="Gradient" id="Gradient_q7tnt"]
colors = PackedColorArray(0.0901961, 0.0627451, 0.0588235, 1, 0.407843, 0.345098, 0.282353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_naf2n"]
gradient = SubResource("Gradient_q7tnt")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_kqqof"]
colors = PackedColorArray(0.0901961, 0.0627451, 0.0588235, 1, 0.407843, 0.345098, 0.282353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ukfu3"]
gradient = SubResource("Gradient_kqqof")
width = 32
height = 32
fill_to = Vector2(0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o8fq7")

[node name="HUDTexts" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemReset" type="RichTextLabel" parent="HUDTexts"]
visible = false
custom_minimum_size = Vector2(350, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[center]SYSTEM RESET[/center]"

[node name="VBoxContainer_Selected" type="VBoxContainer" parent="HUDTexts"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2

[node name="SelectedStar" type="RichTextLabel" parent="HUDTexts/VBoxContainer_Selected"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="SelectedPlanet" type="RichTextLabel" parent="HUDTexts/VBoxContainer_Selected"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="HUDTexts"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.0
grow_horizontal = 2
grow_vertical = 0

[node name="FCSStatus" type="RichTextLabel" parent="HUDTexts/VBoxContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[right]INITIALIZED[/right]"

[node name="HBoxContainer" type="HBoxContainer" parent="HUDTexts/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ParsisLabel" type="RichTextLabel" parent="HUDTexts/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = SubResource("FontVariation_mieu8")
bbcode_enabled = true
text = "[center]Parsis: x=1000, y=123, z=-123[/center]"

[node name="APTarget" type="RichTextLabel" parent="HUDTexts/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = SubResource("FontVariation_mieu8")
bbcode_enabled = true

[node name="NumBodies" type="RichTextLabel" parent="HUDTexts/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = SubResource("FontVariation_mieu8")
bbcode_enabled = true

[node name="HUDBackground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="TextureRect" parent="HUDBackground"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 32.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_naf2n")

[node name="Right" type="TextureRect" parent="HUDBackground"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_naf2n")
flip_h = true

[node name="Top" type="TextureRect" parent="HUDBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_ukfu3")

[node name="Bottom" type="TextureRect" parent="HUDBackground"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_ukfu3")
flip_v = true
